--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                         <div class="text-center bounce-animation">
                             <p class="text-sm opacity-80">Por apenas</p>
                             <p class="text-4xl font-bold text-accent">R$ 37,50</p>
-                            <p class="text-sm opacity-90">ou 4x de R$ 9,75</p>
+                            <p class="text-sm opacity-90">ou 4x de R$ 10,21</p>
                         </div>
                         
                         <div class="text-center">
@@ -990,7 +990,7 @@
                 </div>
                 
                 <!-- Ebook Purchase Form -->
-                <a href="https://mpago.la/2xEjAx9" target="_blank" class="w-full bg-accent text-dark px-8 py-4 rounded-full font-bold hover:bg-opacity-90 transition flex items-center justify-center pulse-animation">
+                <a href="https://pay.kiwify.com.br/nqjvezE" target="_blank" class="w-full bg-accent text-dark px-8 py-4 rounded-full font-bold hover:bg-opacity-90 transition flex items-center justify-center pulse-animation">
                     <i class="fas fa-shopping-cart mr-3"></i>
                     Comprar Agora - R$ 37,50
                 </a>             
@@ -1102,7 +1102,7 @@
             </div>
             <div class="flex items-center justify-center">
                 <p class="text-xl font-bold mr-4">R$ 37,50</p>
-                <a href="https://mpago.la/2xEjAx9" class="bg-accent text-dark px-6 py-2 rounded-full font-bold hover:bg-opacity-90 transition whitespace-nowrap">
+                <a href="https://pay.kiwify.com.br/nqjvezE" class="bg-accent text-dark px-6 py-2 rounded-full font-bold hover:bg-opacity-90 transition whitespace-nowrap">
                     Comprar Agora
                 </a>
             </div>
